# tamoc

./: .gitignore  CHANGES.txt  LICENSE.txt  MANIFEST  MANIFEST.in  PKG-INFO  README.md  README.rst  README.txt  conda_requirements.txt  environment.yml  meson.build  meson_options.txt  pyproject.toml  setup.cfg  setup.py  tach.toml
Notebooks/: Blowout_sim.ipynb
docs/: api.html  bugs.html  contents.html  genindex.html  glossary.html  guides.html  howto.html  index.html  install.html  license.html  objects.inv  py-modindex.html  readme.html  release.html  scripts.html  search.html  searchindex.js  start.html  tests.html  unit_tests.html  user_manual.html
docs/_downloads/: CHANGES.txt  README.rst  README.txt
docs/_modules/: ambient.html  bent_plume_model.html  biodeg_properties.html  blowout.html  bpm_example.html  chemical_properties.html  crossflow_plume.html  dbm.html  dbm_utilities.html  dispersed_phases.html  index.html  lake_bub.html  lake_part.html  lmp.html  model_share.html  params.html  particle_size_models.html  profile_append.html  profile_extending.html  psf.html  seawater.html  simp.html  single_bubble_model.html  sintef.html  smp.html  spm_file_io.html  stratified_plume_model.html
docs/_sources/: api.rst  api.rst.txt  bugs.rst.txt  bugs.txt  contents.rst.txt  contents.txt  glossary.rst.txt  glossary.txt  guides.rst.txt  howto.rst  index.rst  index.rst.txt  install.rst  install.rst.txt  license.rst.txt  readme.rst  readme.rst.txt  readme.txt  release.rst  release.rst.txt  release.txt  scripts.rst  start.rst.txt  tests.rst  unit_tests.rst.txt  user_manual.rst.txt
docs/_static/: documentation_options.js
docs/ambient/: ambient.Profile.append.html  ambient.Profile.build_interpolator.html  ambient.Profile.buoyancy_frequency.html  ambient.Profile.close_nc.html  ambient.Profile.extend_profile_deeper.html  ambient.Profile.get_units.html  ambient.Profile.get_values.html  ambient.Profile.html  ambient.coarsen.html  ambient.compute_pressure.html  ambient.convert_units.html  ambient.create_nc_db.html  ambient.extract_profile.html  ambient.fill_nc_db.html  ambient.get_nc_db_from_roms.html  ambient.load_raw.html  ambient.stabilize.html  guide.html
docs/bpm/: bent_plume_model.LagElement.html  bent_plume_model.LagElement.update.html  bent_plume_model.Model.html  bent_plume_model.Model.load_sim.html  bent_plume_model.Model.plot_all_variables.html  bent_plume_model.Model.plot_state_space.html  bent_plume_model.Model.save_sim.html  bent_plume_model.Model.save_txt.html  bent_plume_model.Model.simulate.html  bent_plume_model.ModelParams.html  bent_plume_model.Particle.html  bent_plume_model.Particle.outside.html  bent_plume_model.Particle.run_sbm.html  bent_plume_model.Particle.track.html  bent_plume_model.plot_all_variables.html  bent_plume_model.plot_state_space.html  bent_plume_model.width_projection.html  guide.html  lmp.bent_plume_ic.html  lmp.calculate.html  lmp.derivs.html  lmp.entrainment.html  lmp.flux_to_velocity.html  lmp.local_coords.html  lmp.main_ic.html  lmp.zfe_volume_flux.html
docs/chem/: ChemData_ReadMe.html  chem.load_data.html  chemical_properties.load_data.html  guide.html
docs/dbm/: dbm.FluidMixture.density.html  dbm.FluidMixture.diffusivity.html  dbm.FluidMixture.equilibrium.html  dbm.FluidMixture.fugacity.html  dbm.FluidMixture.html  dbm.FluidMixture.hydrate_stability.html  dbm.FluidMixture.interface_tension.html  dbm.FluidMixture.mass_frac.html  dbm.FluidMixture.masses.html  dbm.FluidMixture.mol_frac.html  dbm.FluidMixture.moles.html  dbm.FluidMixture.partial_pressures.html  dbm.FluidMixture.solubility.html  dbm.FluidMixture.viscosity.html  dbm.FluidParticle.density.html  dbm.FluidParticle.diameter.html  dbm.FluidParticle.diffusivity.html  dbm.FluidParticle.equilibrium.html  dbm.FluidParticle.fugacity.html  dbm.FluidParticle.heat_transfer.html  dbm.FluidParticle.html  dbm.FluidParticle.hydrate_stability.html  dbm.FluidParticle.interface_tension.html  dbm.FluidParticle.mass_frac.html  dbm.FluidParticle.mass_transfer.html  dbm.FluidParticle.masses.html  dbm.FluidParticle.masses_by_diameter.html  dbm.FluidParticle.mol_frac.html  dbm.FluidParticle.moles.html  dbm.FluidParticle.partial_pressures.html  dbm.FluidParticle.particle_shape.html  dbm.FluidParticle.return_all.html  dbm.FluidParticle.slip_velocity.html  dbm.FluidParticle.solubility.html  dbm.FluidParticle.surface_area.html  dbm.FluidParticle.viscosity.html  dbm.InsolubleParticle.density.html  dbm.InsolubleParticle.diameter.html  dbm.InsolubleParticle.heat_transfer.html  dbm.InsolubleParticle.html  (+13 more)
docs/disp_phases/: guide.html  (+15 more)
tamoc/: __init__.py  ambient.py  bent_plume_model.py  biodeg_properties.py  blowout.py  chemical_properties.py  dbm.py  dbm_f.cpython-310-darwin.so 3.44.44 PM  dbm_f.cpython-310-darwin.so 4.06.20 PM  dbm_f.pyf  dbm_jonas.py  dbm_p.py  dbm_utilities.py  dispersed_phases.py  lfm.py  lmp.py  meson.build  model_share.py  nearfield_plume.py  params.py  particle_size_models.py  psf.py  seawater.py  simp.py  single_bubble_model.py  sintef.py  smp.py  stratified_plume_model.py  subsurface_fracture_model.py  temp.py  temp01.py
tamoc/data/: Aij.csv  Bij.csv  BioData.csv  ChemData.csv  PJData.csv  ctd_BM54.cnv
tamoc/dbm_f.cpython-37m-darwin.so.dSYM/Contents/: Info.plist
tamoc/dbm_f.so.dSYM/Contents/: Info.plist
tamoc/src/: .gitignore  dbm_c.c  dbm_c.pyx  dbm_eos.f95  dbm_p.py  dbm_phys.f95  dmb_c.pyx  math_funcs.f95  math_funcs_old.f95  preos.c  preos_cmodule.c
tamoc/test/: test_ambient.py  test_blowout.py  test_bpm.py  test_cython_fortran.py  test_dbm.py  test_dbm_c.py  test_dbm_c_ut.py  test_dbm_f.py  test_dbm_objects.py  test_params.py  test_psm.py  test_sbm.py  test_sintef.py  test_spm.py
tamoc/tools/: ambient_tools.py  bpm_tools.py  eos_tools.py  meson.build
tamoc/utils/: ambient_utils.py  bpm_utils.py  eos_utils.py  meson.build
test/: test_ambient.py  test_blowout.py  test_bpm.py  test_dbm.py  test_dbm_objects.py  test_params.py  test_psm.py  test_sbm.py  test_sintef.py  test_spm.py
utils/: f2py_generator.py  f2py_generator_old.py  link-version-pyinit.map
(+1083 files in other folders)
