option('with-fortran',
  type: 'boolean',
  value: true,
  description: 'Build Fortran extension module dbm_f'
)

option('with-c',
  type: 'boolean',
  value: true,
  description: 'Build C extension module preos_c'
)

option('python-only',
  type: 'boolean',
  value: false,
  description: 'Install a pure Python package without extension modules'
)
